tests/rosetta/out/Go/catalan-numbers-2.error
run error: exit status 1
# command-line-arguments
../../tests/rosetta/out/Go/catalan-numbers-2.go:29:6: main redeclared in this block
	../../tests/rosetta/out/Go/catalan-numbers-2.go:23:6: other declaration of main
